ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/PD_Ask_Data__c.object-meta.xml
<CustomObject>
    <label>PD Ask Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD-Ask Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>