ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Area_retrieval_status__c.field-meta.xml
<CustomField>
    <fullName>Area_retrieval_status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Area_retrieval_status</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>PD-Ask Data</relationshipLabel>
    <relationshipName>PD_Ask_Data</relationshipName>
    <type>Lookup</type>
</CustomField>