ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Days_on_market_input__c.field-meta.xml
<CustomField>
    <fullName>Days_on_market_input__c</fullName>
    <label>Days on market (input)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>