ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Distance_from__c.field-meta.xml
<CustomField>
    <fullName>Distance_from__c</fullName>
    <label>Distance from</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>