ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <label>Geo Location</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>