ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Lat_In__c.field-meta.xml
<CustomField>
    <fullName>Lat_In__c</fullName>
    <label>Lat_In</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>