ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Lease_years_remaing__c.field-meta.xml
<CustomField>
    <fullName>Lease_years_remaing__c</fullName>
    <label>Lease years remaing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>