ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/LH_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LH_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LH Opportunity</label>
    <referenceTo>LH_Opp__c</referenceTo>
    <relationshipLabel>PD-Ask Data</relationshipLabel>
    <relationshipName>LH_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>