ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Marketed_on__c.field-meta.xml
<CustomField>
    <fullName>Marketed_on__c</fullName>
    <label>Marketed on</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onthemarket</fullName>
            </value>
            <value>
                <fullName>Rightmove</fullName>
            </value>
            <value>
                <fullName>Zoopla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>