ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/On_market_since__c.field-meta.xml
<CustomField>
    <fullName>On_market_since__c</fullName>
    <label>On market since</label>
    <type>Date</type>
</CustomField>