ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Open market link</relationshipLabel>
    <relationshipName>Open_market_links</relationshipName>
    <type>Lookup</type>
</CustomField>