ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/PD_previous_listing__c.field-meta.xml
<CustomField>
    <fullName>PD_previous_listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Previous listing if this is back on the market</inlineHelpText>
    <label>PD previous listing</label>
    <referenceTo>PD_Ask_Data__c</referenceTo>
    <relationshipLabel>PD-Ask Data</relationshipLabel>
    <relationshipName>PD_Ask_Data</relationshipName>
    <type>Lookup</type>
</CustomField>