ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>99</length>
    <type>Text</type>
</CustomField>