ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/PropData_code__c.field-meta.xml
<CustomField>
    <fullName>PropData_code__c</fullName>
    <inlineHelpText>number at end of URL after the website (eg &quot;/o/&apos;) indicator</inlineHelpText>
    <label>PropData code</label>
    <length>99</length>
    <type>Text</type>
</CustomField>