ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/PropData_URL__c.field-meta.xml
<CustomField>
    <fullName>PropData_URL__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used as external ID</inlineHelpText>
    <label>PropData URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>