ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/fields/SSTC__c.field-meta.xml
<CustomField>
    <fullName>SSTC__c</fullName>
    <inlineHelpText>Date from when SSTC was noticed</inlineHelpText>
    <label>SSTC</label>
    <type>Date</type>
</CustomField>