ezyplot-x1/force-app/main/default/objects/PD_Ask_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Type__c</columns>
    <columns>Distance__c</columns>
    <columns>Distance_from__c</columns>
    <columns>LH_Opportunity__c</columns>
    <columns>Street__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>